--- a/styles.css
+++ b/styles.css
@@ -65,12 +65,6 @@ input {
 }
 
 button {
-    /*background-color: rgba(100,21,255);
-    color: #fff;
-    border-radius: 9999px;
-    margin: 8px 8px 8px 0px;
-    padding: 16px 0px;*/
-
     background-color: #6415ff;
     color: #F7FAFC;
     padding: 12px 32px;
@@ -78,7 +72,6 @@ button {
     border-radius: 50px;
     font-size: 16px;
     font-weight: 600;
-    
 }
 
 button:hover {
@@ -166,6 +159,7 @@ a:hover {
 .nav {
     margin: 32px 0 0 0;
 }
+
 
 .nav, 
 .nav__links,
@@ -470,7 +464,7 @@ VALUES
 .affordable__sides, .professionalism__sides {
     align-items: center;
 }
-2
+
 .affordable__header, .professionalism__header {
     color: #243e63;
 }
@@ -1002,6 +996,9 @@ FOOTER
     padding: 0;
 }
 
+@media (max-width: 768px) {
+
+}
 
 
 
