--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,7 @@ a:hover {
 
 .nav {
     margin: 32px 0 0 0;
+    flex-wrap: wrap;
 }
 
 .hamburger {
@@ -176,7 +177,6 @@ a:hover {
     color: #16e785;
     cursor: pointer;
     font-size: 20px;  
-
 }
 
 .hamburger:focus {
@@ -1018,7 +1018,7 @@ FOOTER
     padding: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .nav__links {
         display: none;
         width: 100%;
