--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ a:hover {
     background-color: transparent;
     border: 0;
     display: none;
-    color: #16e785;
+    color: #6415ff;
     cursor: pointer;
     font-size: 20px;  
     height: 24px;
