--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,6 @@ input {
     font-weight: 500;
     border: 2px solid #e5e7eb;
     color: #1A202C;;
-    width: 100%;
 }
 
 .button {
@@ -233,6 +232,7 @@ MENU
     text-decoration: none;
 }
 .menu__btn {
+    color: #6415ff;
     position: absolute;
     top: 24px;
     right: 24px;
@@ -908,10 +908,10 @@ Developers
 .developer__container {
     background-color: #6415ff;
     color: #F7FAFC;
-    width: 1000px;
     height: 282px;
     border-radius: 20px;
     margin: auto;
+    width: 100%;
 }
 
 .developer__container--txt {
@@ -1067,43 +1067,110 @@ MEDIA
 
 */
 
-@media (max-width: 640px) {
+@media (max-width: 1023px) {
+
+    /* NAV */
+
+    .nav__links {
+        display: none;
+    
+    }
+    
+    .nav__burger {
+        display: block;
+    }
 
     /* CLASS */
 
     .paragraphs {
         margin: 16px 0;
+        font-size: 16px;
+    }
+    
+    .paragraphs, .headers, .titles {
+        text-align: left;
+    }
+    
+    .headers {
+        font-size: 36px; 
     }
 
-    .paragraphs, .headers, .titles {
+    /* NAVIGATION */
+
+    .img__design {
+        margin: 24px 0 0 0;
+    }
+
+    .header__columns {
+        display: block;
+    }
+
+    .header__columns--left, 
+    .header__columns--right,
+    .steps__columns--left,
+    .steps__columns--right {
+        max-width: 512px;
+        width: 100%;
+        margin: auto;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header__h1 {
+        font-size: 30px;
+    }
+
+    .header__email {
+        margin: 0 50px;
+
+    }
+
+
+    /* STEPS */
+
+    .steps__columns--left {
+        width: 70%;
+    }
+
+    .steps__columns--right {
+        text-align: left;
+    }
+
+    .step__rows {
+        padding-bottom: 0;
+    }
+
+
+
+    
+}
+
+@media (max-width: 980px) {
+    /* steps */
+    .steps__columns {
+        display: block;
+        align-items: center;
+        margin: auto;
+    }
+
+    .steps__columns--left, .steps__columns--right {
+        width: 100%;
+    }
+
+    .steps__title {
         text-align: center;
     }
 
-    .headers {
-        font-size: 36px;
-        
-    }
+}
 
-    .menu__backdrop {
-        width: 100%;
-    }
+@media (max-width: 640px) {
 
     /*.button {
         margin: 32px 0;
         text-align: center;
     }
     */
-
-    /* NAV */
-
-    .nav__links {
-        display: none;
-
-    }
-
-    .nav__burger {
-        display: block;
-    }
 
     .header__columns {
         display: block;
@@ -1154,11 +1221,12 @@ MEDIA
         width: 100%;
     }
 
+    .quality__columns--right {
+        width: 100%;
+    }
     .img__quality {
         outline: 2px solid #c4c6ca;
-        width: 100%;
-        height: auto;
-
+        max-width: 550px;
     }
 
     /* STEPS */
@@ -1351,9 +1419,9 @@ MEDIA
     .questions__para {
         width: 90%;
     }
-
-
 }
+
+
 
 
 
